Changed the readme file

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-All that's missing is the fork. Heh. I have changed it!! Lo!!
+All that's missing is the fork. Heh. I have changed it!! Lo!! Has it changed?
